changed the design of the week-overview component

--- a/src/styling/weekOverview.css
+++ b/src/styling/weekOverview.css
@@ -1,20 +1,29 @@
 #week-overview {
-    width: 40%;
+    width: 90vw;
     background-color: #DCC6F4;
     padding: 15px;
 }
 
+#day-container {
+    width: 95%;
+    justify-self: center;
+    align-self: center;
+}
+
 .day {
-    padding: 20px;
+    padding: 10px;
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: white;
-    margin: 4px 10px 4px 10px;
+    margin: 2px 3px 4px 3px;
+    width: 12%;
 }
 
 .day-ul {
     list-style-type: none;
     padding: 0;
+    flex-grow: 1;
+    width: 100%;
 }
 
 .day-input {
@@ -29,4 +38,8 @@
     border: none;
     padding: 5px;
     cursor: pointer;
+}
+
+.day-input {
+    max-width: 80%;
 }
