--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+main {
+  height: 80vh;
+}
+
 #all-content {
   width: 100vw;
   height: 100vh;
@@ -10,6 +14,10 @@
 
 .list-style-none {
   list-style-type: none;
+}
+
+.italic {
+  font-style: italic;
 }
 
 /* 
