--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,36 @@
   padding: 0;
 }
 
+main {
+  height: 80vh;
+}
+
 #all-content {
   width: 100vw;
   height: 100vh;
 }
+
+.list-style-none {
+  list-style-type: none;
+}
+
+.italic {
+  font-style: italic;
+}
+
+/* 
+    Colors
+*/
+
+.button-color {
+  background-color: #A569BD;
+  color: white;
+  border: none;
+}
+
+/* 
+    Flex classes
+*/
 
 .flex-column {
   display: flex;
@@ -18,6 +44,63 @@
   flex-direction: row;
 }
 
+.flex-align-center {
+  align-items: center;
+}
+
+.flex-justify-center {
+  justify-content: center;
+}
+
+/* 
+    Padding
+*/
+
 .main-padding {
   padding: 3%;
+}
+
+/* 
+    Margin
+*/
+
+.margin-t-b {
+  margin: 10px 0 10px 0;
+}
+
+.margin-top {
+  margin-top: 10px;
+}
+
+.margin-bottom {
+  margin-bottom: 10px;
+}
+
+.margin-bottom-large {
+  margin-bottom: 30px;
+}
+
+.margin-left {
+  margin-left: 10px;
+}
+
+.margin-right {
+  margin-right: 10px;
+}
+
+/* 
+    All pages
+*/
+
+.content-containers {
+  min-height: 300px;
+}
+
+/* 
+    Input forms
+*/
+
+.input-form {
+  padding: 8px;
+  border-radius: 5px;
 }
